--- a/Odev27/Views/Shared/_Layout.cshtml
+++ b/Odev27/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         </main>
     </div>
 
-    <footer class="border-top bg-secondary foot mt-5">
+    <footer class="border-top bg-secondary foot">
         <div class="container">
             &copy; 2023 - HB - 
         </div>
