--- a/Odev27/Views/Shared/Components/Listele/Default.cshtml
+++ b/Odev27/Views/Shared/Components/Listele/Default.cshtml
@@ -9,7 +9,7 @@
                     <img src="~/img/@item.Resim" class="card-img-top h-100" alt="Resim yok">
                 </div>
                 <div class="card-body text-center">
-                    <h5 id="ad" class="card-title">@item.Ad</h5>
+                    <h5 id="@item.Id" class="card-title">@item.Ad</h5>
                 </div>
                 <div class="card-footer d-flex">
                     <a onclick="duzenle(@item.Id)" class="btn btn-danger me-auto"><i class="fa-solid fa-edit"></i></a>
